--- a/src/contato.html
+++ b/src/contato.html
@@ -23,24 +23,26 @@
         </div>
     </header>
     
-    <section class="container d-flex " style="height: 70vh;">
+    <section class="container d-flex contatoScreen" style="height: 70vh;">
         <div class="row align-items-center">
-            <div class="col-md-6">
-                <div class="row cartao">
+            <div class="col-sm-12 col-lg-6">
+                <div class="row cartao mgTextoCima">
                     <h3>O que fazemos ?</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In quis diam et mi facilisis rhoncus a a diam. Morbi et enim nulla. Nulla at egestas lacus. Vestibulum dignissim tortor nunc, vel consequat neque euismod at. Donec sit amet dui ut quam pretium ultricies in nec urna. Nullam vulputate convallis mollis. Pellentesque pretium rhoncus ipsum, sit amet sollicitudin purus lobortis eu. Quisque pharetra vel nunc quis gravida. In consequat turpis vel magna sagittis, eu aliquet ligula feugiat. Nam lacinia nec nulla at mattis.
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In quis diam et mi facilisis rhoncus a a diam. Morbi et enim nulla. Nulla at egestas lacus. Vestibulum dignissim tortor nunc, vel consequat neque euismod at. Donec sit amet dui ut quam pretium ultricies in nec urna. Nullam vulputate convallis mollis. Pellentesque pretium rhoncus ipsum, sit amet sollicitudin purus lobortis eu. Quisque pharetra vel nunc quis gravida. In consequat turpis vel magna sagittis, eu aliquet ligula feugiat. Nam lacinia nec nulla at mattis.
                     </p>
                 </div>
 
-                <div class="row cartao">
+                <div class="row cartao mgTextoBaixo">
                     <h3>De onde viemos ?</h3>
-                    <p>(Falar um pouco da facens e smartcampus)<br><br>
-                    Aliquam mi turpis, hendrerit in placerat quis, venenatis a dui. Sed sem mauris, maximus quis imperdiet porttitor, sagittis sed dolor. Proin neque elit, sollicitudin eget nulla quis, pharetra mollis nunc. Nullam quis lacinia enim, et rhoncus nisl. Vivamus in mi justo. Praesent ac risus aliquam, porta purus nec, accumsan neque. Donec dapibus tellus nec ultricies porta. Morbi venenatis mattis laoreet. Nam odio libero, pretium ac dui eget, ultricies pretium purus.
+                    <p>
+                        (Falar um pouco da facens e smartcampus)<br><br>
+                        Aliquam mi turpis, hendrerit in placerat quis, venenatis a dui. Sed sem mauris, maximus quis imperdiet porttitor, sagittis sed dolor. Proin neque elit, sollicitudin eget nulla quis, pharetra mollis nunc. Nullam quis lacinia enim, et rhoncus nisl. Vivamus in mi justo. Praesent ac risus aliquam, porta purus nec, accumsan neque. Donec dapibus tellus nec ultricies porta. Morbi venenatis mattis laoreet. Nam odio libero, pretium ac dui eget, ultricies pretium purus.
                     </p>
                 </div>
             </div>
 
-            <div class="col-md-6 align-self-center text-center">
+            <div class="col-sm-12 col-lg-6 align-self-center justify-content-center text-center">
                 <h2>SmartCampus Facens</h2>
                 <div class="contatoImg">
                     <img src="../images/mapaFacens.png" alt="SmartCampusFacens">
