--- a/src/contato.html
+++ b/src/contato.html
@@ -23,7 +23,7 @@
         </div>
     </header>
     
-    <section class="container d-flex contatoScreen" style="height: 70vh;">
+    <section class="container d-flex" style="height: 70vh;">
         <div class="row align-items-center">
             <div class="col-sm-12 col-lg-6">
                 <div class="row cartao mgTextoCima">
