feat(guia, slider): criei novos elementos e alterei o css das paginas existentes

--- a/footer.html
+++ b/footer.html
@@ -44,21 +44,21 @@
 
                     <a href="#" class="text-decoration-none">
                         <p class="mb-5 footer-hover">
-                            <img class="mr-2" src="./images/estudar-com-vc.png" width="51rem" height="51rem">
+                            <img class="mr-2" src="./images/estudar-com-vc.png" width="51rem" height="51rem" alt="Estudar com Você">
                             Estudar com Você
                         </p>
                     </a>
 
                     <a href="#" class="text-decoration-none">
                         <p class="mb-5 footer-hover">
-                            <img class="mr-2" src="./images/khan-academy.png" width="51rem" height="51rem">
+                            <img class="mr-2" src="./images/khan-academy.png" width="51rem" height="51rem" alt="Khan Academy">
                             Khan Academy
                         </p>
                     </a>
 
                     <a href="#" class="text-decoration-none">
                         <p class="footer-hover mb-5">
-                            <img class="mr-2" src="./images/code-org.png" width="51rem" height="51rem">
+                            <img class="mr-2" src="./images/code-org.png" width="51rem" height="51rem" alt="Code.org">
                             Code.org
                         </p>
                     </a>
@@ -73,7 +73,7 @@
                     <p>Copyright © 2021 | All rights reserved</p>
                     <p>Icons by <a href="https://www.flaticon.com/" target="_blank" class="text-decoration-none">Good Ware, Freepik and Payungkead</a></p>
                     <p class="renew-footer">
-                        <img class="mr-2" src="./images/logo.png" width="51px" height="51px">
+                        <img class="mr-2" src="./images/logo.png" width="51px" height="51px" alt="RenewStudy">
                         RenewStudy
                     </p>
                 </div>
