--- a/navbar.html
+++ b/navbar.html
@@ -8,10 +8,15 @@
     <!--BOOTSTRAP-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
 
-    <!--FONTES (Amatic SC, Raleway)-->
+    <!--
+        FONTES {
+            Amatic SC -> @400, @700
+            Raleway -> @400, @700, @900
+        }
+    -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Raleway:wght@400;900&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Raleway:wght@400;700;900&display=swap" rel="stylesheet">
+    
     <!--ESTILO-->
     <link rel="stylesheet" href="./style/navbar.css">
 </head>
@@ -19,7 +24,7 @@
     <header class="container-xl">
         <nav class="navbar navbar-expand-lg navbar-light">
             <a class="navbar-brand titulo-logo" href="#">
-                <img class="mr-3 ml-5" src="./images/logo.png" width="71px" height="71px">
+                <img class="mr-3 ml-5" src="./images/logo.png" width="71px" height="71px" alt="RenewStudy">
                 RenewStudy
             </a>
             
