--- a/sobre.html
+++ b/sobre.html
@@ -8,9 +8,16 @@
 
     <!--ICONE DO SITE-->
     <link rel="shortcut icon" href="./images/logo.png">
+
+    <!--ESTILO-->
+    <link rel="stylesheet" href="./style/guia.css">
 </head>
 <body>
     <import id="ipt-navbar"></import>
+
+    <div class="top-range-sobre container-fluid mt-1 text-center">
+        <span class="tp-rg-text">Sobre nós</span>
+    </div>
 
     <div class="mb-5 mt-5 container-xl">
         <div class="align-items-center d-flex justify-content-center flex-column container-sm">
@@ -34,7 +41,7 @@
             
             <div class="d-flex justify-content-center align-items-center flex-column mt-5 mb-5">
                 <h1 style="color: #004479;">SmartCampus Facens</h1>
-                <img class="img-fluid" src="./images/facens.png">
+                <img class="img-fluid" src="./images/facens.png" alt="SmartCampus Facens">
                 <small style="color: #004479;">Facens | Centro Universitário</small>
             </div>
         </div>
