refactor(footer & navbar): inclusao de links e e-mail no footer e remocao do divider do dropdown da navbar

--- a/footer.html
+++ b/footer.html
@@ -21,7 +21,7 @@
 
                     <hr class="mb-4">
 
-                    <a href="#" class="text-decoration-none"><p class="footer-hover mb-5"><i class="footer-i fas fa-paper-plane mr-2" style="color: #705E78;"></i>contato.renew.study@outlook.com</p></a>
+                    <a href="mailto:contato.renew.study@outlook.com?Subject=Contato%20com%20RenewStudy"" class="text-decoration-none"><p class="footer-hover mb-5"><i class="footer-i fas fa-paper-plane mr-2" style="color: #705E78;"></i>contato.renew.study@outlook.com</p></a>
                     <a href="#" class="text-decoration-none"><p class="footer-hover mb-5"><i class="footer-i fas fa-home mr-2" style="color: #705E78;"></i>Página inicial</p></a>
                     <a href="#" class="text-decoration-none"><p class="footer-hover mb-5"><i class="footer-i fas fa-address-card mr-2" style="color: #705E78;"></i>Sobre nós</p></a>
                 </div>
@@ -42,21 +42,21 @@
 
                     <hr class="mb-4">
 
-                    <a href="#" class="text-decoration-none">
+                    <a href="https://estudar.com.vc/" target="_blank" class="text-decoration-none">
                         <p class="mb-5 footer-hover">
                             <img class="mr-2" src="./images/estudar-com-vc.png" width="51rem" height="51rem">
                             Estudar com Você
                         </p>
                     </a>
 
-                    <a href="#" class="text-decoration-none">
+                    <a href="https://www.khanacademy.org/" target="_blank" class="text-decoration-none">
                         <p class="mb-5 footer-hover">
                             <img class="mr-2" src="./images/khan-academy.png" width="51rem" height="51rem">
                             Khan Academy
                         </p>
                     </a>
 
-                    <a href="#" class="text-decoration-none">
+                    <a href="https://code.org/" target="_blank" class="text-decoration-none">
                         <p class="footer-hover mb-5">
                             <img class="mr-2" src="./images/code-org.png" width="51rem" height="51rem">
                             Code.org
@@ -70,7 +70,7 @@
 
             <div class="row d-flex justify-content-center mt-5">
                 <div class="text-center">
-                    <p>Copyright © 2021 | All rights reserved</p>
+                    <p>Copyright RenewStudy © 2021 | All rights reserved</p>
                     <p>Icons by <a href="https://www.flaticon.com/" target="_blank" class="text-decoration-none">Good Ware, Freepik and Payungkead</a></p>
                     <p class="renew-footer">
                         <img class="mr-2" src="./images/logo.png" width="51px" height="51px">
