refactor(navbar): links da home e sobre

--- a/navbar.html
+++ b/navbar.html
@@ -35,7 +35,7 @@
             <div class="collapse navbar-collapse links-nav" id="navbarNavDropdown">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link ml-5 mr-5" href="#">Página inicial</a>
+                        <a class="nav-link ml-5 mr-5" href="index.html">Página inicial</a>
                     </li>
 
                     <li class="nav-item dropdown ml-5 mr-5">
@@ -52,7 +52,7 @@
                     </li>
 
                     <li class="nav-item ml-5 mr-5">
-                        <a class="nav-link" href="#">Sobre nós</a>
+                        <a class="nav-link" href="sobre.html">Sobre nós</a>
                     </li>
                 </ul>
             </div>
