--- a/sobre.html
+++ b/sobre.html
@@ -11,6 +11,8 @@
 
     <!--ESTILO-->
     <link rel="stylesheet" href="./style/guia.css">
+
+
 </head>
 <body>
     <import id="ipt-navbar"></import>
@@ -24,24 +26,30 @@
             <div class="mb-2">
                 <h1><strong style="color: #58ee9d;">Quem somos ?</strong></h1>
                 <p style="color: #3991be;">
-                    Aliquam mi turpis, hendrerit in placerat quis, venenatis a dui. 
-                    Sed sem mauris, maximus quis imperdiet porttitor, sagittis sed dolor. 
-                    Proin neque elit, sollicitudin eget nulla quis, pharetra mollis nunc.
+                    A equipe do <b>Renewstudy</b> é composta por 5 
+                    alunos de Engenharia da Computação que ainda estão no inicio da caminhada no 
+                    Centro Universitário Facens: Alex, Enzo, Igor, Leo e Luiz.
+                    
                 </p>
             </div>
 
             <div class="mt-2">
                 <h1><strong style="color: #58ee9d;">O que fazemos ?</strong></h1>
                 <p style="color: #3991be;">
-                    Aliquam mi turpis, hendrerit in placerat quis, venenatis a dui. 
-                    Sed sem mauris, maximus quis imperdiet porttitor, sagittis sed dolor. 
-                    Proin neque elit, sollicitudin eget nulla quis, pharetra mollis nunc.
+                    Nosso objetivo com esse site, é facilitar a vida de quem quer entender sobre algumas das energias renovaveis, tal como a energia solar, 
+                    hidráulica, eólica e marémotriz: "Como funciona ?", "De onde vieram ?", "Vieram em paz ?".
+                    <br><br>
+                    <b>Mas como vamos facilitar a vida dos senhores e senhoras estudantes interessados nas energias ?</b>
+                    <br>
+                    Essa pergunta é boa, vamos fazer isso através do material didático auxiliar que deixamos para vocês, com conteúdo resumido e fácil de entender, que presente bom ! 
                 </p>
             </div>
             
             <div class="d-flex justify-content-center align-items-center flex-column mt-5 mb-5">
                 <h1 style="color: #004479;">SmartCampus Facens</h1>
+
                 <img class="img-fluid" src="./images/facens.png" alt="SmartCampus Facens">
+
                 <small style="color: #004479;">Facens | Centro Universitário</small>
             </div>
         </div>
