refactor(navbar): adicionando animação no logo

--- a/navbar.html
+++ b/navbar.html
@@ -24,7 +24,7 @@
     <header class="container-xl">
         <nav class="navbar navbar-expand-lg navbar-light">
             <a class="navbar-brand titulo-logo" href="#">
-                <img class="mr-3 ml-5" src="./images/logo.png" width="71px" height="71px" alt="RenewStudy">
+                <img class="mr-3" src="./images/logo.png" alt="logo">
                 RenewStudy
             </a>
             
