refactor(navbar & footer): mudando o hamburguer button da navbar e removendo o import do font awesome

--- a/footer.html
+++ b/footer.html
@@ -5,9 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <!--ICONES-->
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
-
     <!--ESTILO-->
     <link rel="stylesheet" href="./style/footer.css">
 </head>
@@ -70,7 +67,7 @@
 
             <div class="row d-flex justify-content-center mt-5">
                 <div class="text-center">
-                    <p>Copyright RenewStudy © 2021 | All rights reserved</p>
+                    <p>Copyright <b>RenewStudy</b> © 2021 | All rights reserved</p>
                     <p>Icons by <a href="https://www.flaticon.com/" target="_blank" class="text-decoration-none">Good Ware, Freepik and Payungkead</a></p>
                     <p class="renew-footer">
                         <img class="mr-2" src="./images/logo.png" width="51px" height="51px" alt="RenewStudy">
