o slider vai ser implementado na guia, assim, na pagina de conteudo fica mais clean além de solucionar o problema do espaço dos textos.

--- a/sobre.html
+++ b/sobre.html
@@ -18,7 +18,7 @@
     <import id="ipt-navbar"></import>
 
     <div class="top-range-sobre container-fluid mt-1 text-center">
-        <span class="tp-rg-text">Sobre nós</span>
+        <span>Sobre nós</span>
     </div>
 
     <div class="mb-5 mt-5 container-xl">
