refactor(sobre): adicionando hover na imagem

--- a/sobre.html
+++ b/sobre.html
@@ -12,6 +12,11 @@
     <!--ESTILO-->
     <link rel="stylesheet" href="./style/guia.css">
 
+    <style>
+        .about-us-img:hover{
+            width: 90%;
+        }
+    </style>
 
 </head>
 <body>
@@ -29,7 +34,6 @@
                     A equipe do <b>Renewstudy</b> é composta por 5 
                     alunos de Engenharia da Computação que ainda estão no inicio da caminhada no 
                     Centro Universitário Facens: Alex, Enzo, Igor, Leo e Luiz.
-                    
                 </p>
             </div>
 
@@ -48,7 +52,7 @@
             <div class="d-flex justify-content-center align-items-center flex-column mt-5 mb-5">
                 <h1 style="color: #004479;">SmartCampus Facens</h1>
 
-                <img class="img-fluid" src="./images/facens.png" alt="SmartCampus Facens">
+                <img class="img-fluid about-us-img" src="./images/facens.png" alt="SmartCampus Facens">
 
                 <small style="color: #004479;">Facens | Centro Universitário</small>
             </div>
