refactor(footer,navbar): added a hover animation at dropdown navbar buttons and footer logo

--- a/navbar.html
+++ b/navbar.html
@@ -47,10 +47,10 @@
                         </a>
                         
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item mb-3 mt-3" href="#">Solar</a>
-                            <a class="dropdown-item mb-3 mt-3" href="#">Eólica</a>
-                            <a class="dropdown-item mb-3 mt-3" href="#">Hidráulica</a>
-                            <a class="dropdown-item mb-3 mt-4" href="#">Maremotriz</a>
+                            <a class="dropdown-item mb-3 mt-3 drop-down-solar" href="#">Solar</a>
+                            <a class="dropdown-item mb-3 mt-3 drop-down-eolica" href="#">Eólica</a>
+                            <a class="dropdown-item mb-3 mt-3 drop-down-hidraulica" href="#">Hidráulica</a>
+                            <a class="dropdown-item mb-3 mt-3 drop-down-maremotriz" href="#">Maremotriz</a>
                         </div>
                     </li>
 
