feat(sobre nos): added a loading animation before page load

--- a/sobre.html
+++ b/sobre.html
@@ -22,11 +22,15 @@
 <body>
     <import id="ipt-navbar"></import>
 
-    <div class="top-range-sobre container-fluid mt-1 text-center">
+    <div class="d-flex justify-content-center align-items-center loading-container">
+        <img class="loading-icon" src="./images/logo-sem-livro.png"/>
+    </div>
+    
+    <div class="top-range-sobre container-fluid mt-1 text-center about-us-content">
         <span>Sobre nós</span>
     </div>
 
-    <div class="mb-5 mt-5 container-xl">
+    <div class="mb-5 mt-5 container-xl about-us-content">
         <div class="align-items-center d-flex justify-content-center flex-column container-sm">
             <div class="mb-2">
                 <h1><strong style="color: #58ee9d;">Quem somos ?</strong></h1>
@@ -65,6 +69,8 @@
     <script src="./script/jquery-3.6.0.min.js"></script>
 
     <!--IMPORTS-->
+    <script src="./script/sobre.js"></script>
+
     <script src="./script/import.js"></script>
 </body>
 </html>
