refactor(loading): added loading content script at a separated file, being called at navbar import

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <img class="loading-icon" src="./images/logo-sem-livro.png"/>
     </div>
 
-    <div class="home-content mb-5 mt-5 container-xl">
+    <div class="content-container mb-5 mt-5 container-xl">
         <div class="d-flex justify-content-around container-sm align-items-center home-container">
             <div class="d-flex flex-column justify-content-center align-items-center">
                 <span class="titulo-um">Máterial didático auxiliar para o ensino fundamental</span>
@@ -62,7 +62,5 @@
 
     <!--IMPORTS-->
     <script src="./script/import.js"></script>
-
-    <script src="./script/index.js"></script>
 </body>
 </html>
