--- a/sobre.html
+++ b/sobre.html
@@ -7,10 +7,6 @@
     <title>Sobre nós</title>
 
     <!--ICONE DO SITE-->
-    <link rel="shortcut icon" href="./images/logo.png">
-
-    <!--ESTILO-->
-    <link rel="stylesheet" href="./style/guia.css">
 
     <style>
         .about-us-img:hover{
@@ -26,11 +22,11 @@
         <img class="loading-icon" src="./images/logo-sem-livro.png"/>
     </div>
     
-    <div class="top-range-sobre container-fluid mt-1 text-center about-us-content">
+    <div class="top-range-sobre container-fluid mt-1 text-center content-container">
         <span>Sobre nós</span>
     </div>
 
-    <div class="mb-5 mt-5 container-xl about-us-content">
+    <div class="mb-5 mt-5 container-xl content-container">
         <div class="align-items-center d-flex justify-content-center flex-column container-sm">
             <div class="mb-2">
                 <h1><strong style="color: #58ee9d;">Quem somos ?</strong></h1>
@@ -69,8 +65,6 @@
     <script src="./script/jquery-3.6.0.min.js"></script>
 
     <!--IMPORTS-->
-    <script src="./script/sobre.js"></script>
-
     <script src="./script/import.js"></script>
 </body>
 </html>
