--- a/navbar.html
+++ b/navbar.html
@@ -22,6 +22,9 @@
     
     <!--ESTILO-->
     <link rel="stylesheet" href="./style/navbar.css">
+    <link rel="stylesheet" href="./style/loading_content.css">
+    <link rel="stylesheet" href="./style/guia.css">
+    
 </head>
 <body>
     <header class="container-xl">
@@ -64,5 +67,7 @@
 
     <!--BOOTSTRAP-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"></script>
+
+    <script src="script/loading_content.js"></script>
 </body>
 </html>
