adicionado o icone do site

--- a/sobre.html
+++ b/sobre.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,21 +8,23 @@
     <title>Sobre nós</title>
 
     <!--ICONE DO SITE-->
+    <link rel="shortcut icon" href="./images/logo.png">
 
     <style>
-        .about-us-img:hover{
+        .about-us-img:hover {
             width: 90%;
         }
     </style>
 
 </head>
+
 <body>
     <import id="ipt-navbar"></import>
 
     <div class="d-flex justify-content-center align-items-center loading-container">
-        <img class="loading-icon" src="./images/logo-sem-livro.png"/>
+        <img class="loading-icon" src="./images/logo-sem-livro.png" />
     </div>
-    
+
     <div class="top-range-sobre container-fluid mt-1 text-center content-container">
         <span>Sobre nós</span>
     </div>
@@ -31,8 +34,8 @@
             <div class="mb-2">
                 <h1><strong style="color: #58ee9d;">Quem somos ?</strong></h1>
                 <p style="color: #3991be;">
-                    A equipe do <b>Renewstudy</b> é composta por 5 
-                    alunos de Engenharia da Computação que ainda estão no inicio da caminhada no 
+                    A equipe do <b>Renewstudy</b> é composta por 5
+                    alunos de Engenharia da Computação que ainda estão no inicio da caminhada no
                     Centro Universitário Facens: Alex, Enzo, Igor, Leo e Luiz.
                 </p>
             </div>
@@ -40,15 +43,18 @@
             <div class="mt-2">
                 <h1><strong style="color: #58ee9d;">O que fazemos ?</strong></h1>
                 <p style="color: #3991be;">
-                    Nosso objetivo com esse site, é facilitar a vida de quem quer entender sobre algumas das energias renovaveis, tal como a energia solar, 
+                    Nosso objetivo com esse site, é facilitar a vida de quem quer entender sobre algumas das energias
+                    renovaveis, tal como a energia solar,
                     hidráulica, eólica e marémotriz: "Como funciona ?", "De onde vieram ?", "Vieram em paz ?".
                     <br><br>
-                    <b>Mas como vamos facilitar a vida dos senhores e senhoras estudantes interessados nas energias ?</b>
+                    <b>Mas como vamos facilitar a vida dos senhores e senhoras estudantes interessados nas energias
+                        ?</b>
                     <br>
-                    Essa pergunta é boa, vamos fazer isso através do material didático auxiliar que deixamos para vocês, com conteúdo resumido e fácil de entender, que presente bom ! 
+                    Essa pergunta é boa, vamos fazer isso através do material didático auxiliar que deixamos para vocês,
+                    com conteúdo resumido e fácil de entender, que presente bom !
                 </p>
             </div>
-            
+
             <div class="d-flex justify-content-center align-items-center flex-column mt-5 mb-5">
                 <h1 style="color: #004479;">SmartCampus Facens</h1>
 
@@ -67,4 +73,5 @@
     <!--IMPORTS-->
     <script src="./script/import.js"></script>
 </body>
+
 </html>
