adicionado o link da pagina inicial no logo do site

--- a/navbar.html
+++ b/navbar.html
@@ -29,7 +29,7 @@
 <body>
     <header class="container-xl">
         <nav class="navbar navbar-expand-lg navbar-light">
-            <a class="navbar-brand titulo-logo" href="#">
+            <a class="navbar-brand titulo-logo" href="./index.html">
                 <img class="mr-3" src="./images/logo.png" alt="logo">
                 RenewStudy
             </a>
