adicionado os links que direcionam para a pagina inicial e do  sobre nos

--- a/footer.html
+++ b/footer.html
@@ -19,8 +19,8 @@
                     <hr class="mb-4">
 
                     <a href="mailto:contato.renew.study@outlook.com?Subject=Contato%20com%20RenewStudy"" class="text-decoration-none"><p class="footer-hover mb-5"><i class="footer-i fas fa-paper-plane mr-2" style="color: #705E78;"></i>contato.renew.study@outlook.com</p></a>
-                    <a href="#" class="text-decoration-none"><p class="footer-hover mb-5"><i class="footer-i fas fa-home mr-2" style="color: #705E78;"></i>Página inicial</p></a>
-                    <a href="#" class="text-decoration-none"><p class="footer-hover mb-5"><i class="footer-i fas fa-address-card mr-2" style="color: #705E78;"></i>Sobre nós</p></a>
+                    <a href="./index.html" class="text-decoration-none"><p class="footer-hover mb-5"><i class="footer-i fas fa-home mr-2" style="color: #705E78;"></i>Página inicial</p></a>
+                    <a href="./sobre.html" class="text-decoration-none"><p class="footer-hover mb-5"><i class="footer-i fas fa-address-card mr-2" style="color: #705E78;"></i>Sobre nós</p></a>
                 </div>
 
                 <div class="col-md-4 col-lg-4 col-xl-4 mx-auto mt-3 text-center mt-5">
