refactor(guide-line): removing energy name on mobile

--- a/guia-conteudo.html
+++ b/guia-conteudo.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <div class="container-fluid mt-1">            
-        <div class="row align-items-center text-center top-range-solar">
+        <div class="row align-items-center justify-content-between text-center top-range-solar">
             <div class="col">
                 <a href="#" class="text-decoration-none">
                     <i class="fas fa-angle-double-left"></i>
-                    <span class="">ANTERIOR</span>
+                    <span class="energy-name">ANTERIOR</span>
                 </a>
             </div>
 
@@ -22,7 +22,7 @@
 
             <div class="col">
                 <a href="#" class="text-decoration-none">
-                    <span class="">PRÓXIMO</span>
+                    <span class="energy-name">PRÓXIMO</span>
                     <i class="fas fa-angle-double-right"></i>
                 </a>
             </div>
