feat(content): added content changing feature

--- a/navbar.html
+++ b/navbar.html
@@ -50,10 +50,10 @@
                         </a>
                         
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item mb-3 mt-3 drop-down-solar" href="#">Solar</a>
-                            <a class="dropdown-item mb-3 mt-3 drop-down-eolica" href="#">Eólica</a>
-                            <a class="dropdown-item mb-3 mt-3 drop-down-hidraulica" href="#">Hidráulica</a>
-                            <a class="dropdown-item mb-3 mt-3 drop-down-maremotriz" href="#">Maremotriz</a>
+                            <a class="dropdown-item mb-3 mt-3 drop-down-solar" href="solar.html">Solar</a>
+                            <a class="dropdown-item mb-3 mt-3 drop-down-eolica" href="eolica.html">Eólica</a>
+                            <a class="dropdown-item mb-3 mt-3 drop-down-hidraulica" href="hidraulica.html">Hidráulica</a>
+                            <a class="dropdown-item mb-3 mt-3 drop-down-maremotriz" href="maremotriz.html">Maremotriz</a>
                         </div>
                     </li>
 
