refactor(home): adding links at those content buttons

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
                     <span class="titulo-quatro text-center">Para iniciar o aprendizado, escolha o conteúdo:</span>
 
                     <div class="d-flex justify-content-between mb-4">
-                        <a href="#" class="home-btn btn-solar">Solar</a>
-                        <a href="#" class="home-btn btn-eolica">Eólica</a>
+                        <a href="solar.html" class="home-btn btn-solar">Solar</a>
+                        <a href="eolica.html" class="home-btn btn-eolica">Eólica</a>
                     </div>
 
                     <div class="d-flex justify-content-between">
-                        <a href="#" class="home-btn btn-hidra">Hidráulica</a>
-                        <a href="#" class="home-btn btn-mare">Maremotriz</a>
+                        <a href="hidraulica.html" class="home-btn btn-hidra">Hidráulica</a>
+                        <a href="maremotriz.html" class="home-btn btn-mare">Maremotriz</a>
                     </div>
                 </div>
             </div>
