--- a/footer.html
+++ b/footer.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
+    <!--ICONES-->
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
+
     <!--ESTILO-->
     <link rel="stylesheet" href="./style/footer.css">
 </head>
