--- a/content/conteudo-eolica.html
+++ b/content/conteudo-eolica.html
@@ -16,34 +16,42 @@
 
   <div class="container-md">
     <div class="quiz">
+      <div class="quiz-select">
+        <div onclick="selectQuizOption(1)" id="question1" class="quiz-select-question-option">1</div>
+        <div onclick="selectQuizOption(2)" id="question2" class="quiz-select-question-option">2</div>
+        <div onclick="selectQuizOption(3)" id="question3" class="quiz-select-question-option">3</div>
+        <div onclick="selectQuizOption(4)" id="question4" class="quiz-select-question-option">4</div>
+        <div onclick="selectQuizOption(5)" id="question5" class="quiz-select-question-option">5</div>
+      </div>
+
       <div class="quiz-question">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus maiores iure molestiae quis voluptas asperiores quisquam tempora mollitia quibusdam amet obcaecati sit soluta ea perferendis, quos temporibus omnis exercitationem repellendus?
       </div>
 
       <div class="quiz-alternatives">
         <div class="quiz-alternatives-answer">
-          <label class="quiz-alternative-button">A</label>
+          <label onclick="selectQuizAlternative(1)" id="alternative1" class="quiz-alternative-button">A</label>
           <span>Resposta A</span>
         </div>
 
         <div class="quiz-alternatives-answer">
-          <label class="quiz-alternative-button">B</label>
+          <label onclick="selectQuizAlternative(2)" id="alternative2" class="quiz-alternative-button">B</label>
           <span>Resposta B</span>
         </div>
 
         <div class="quiz-alternatives-answer">
-          <label class="quiz-alternative-button">C</label>
+          <label onclick="selectQuizAlternative(3)" id="alternative3" class="quiz-alternative-button">C</label>
           <span>Resposta C</span>
         </div>
 
         <div class="quiz-alternatives-answer">
-          <label class="quiz-alternative-button">D</label>
+          <label onclick="selectQuizAlternative(4)" id="alternative4" class="quiz-alternative-button">D</label>
           <span>Resposta D</span>
         </div>
-        
       </div>
     </div>
   </div>
 
+  <script src="./script/quiz.js"></script>
 </body>
 </html>
