refactor(footer): added energies link references

--- a/footer.html
+++ b/footer.html
@@ -31,10 +31,10 @@
 
                     <hr class="mb-4">
 
-                    <a href="#" class="text-decoration-none"><p class="footer-hover-s mb-5 "><i class="footer-i fas fa-solar-panel mr-2" style="color: #ffd600;"></i>Solar</p></a>
-                    <a href="#" class="text-decoration-none"><p class="footer-hover-v mb-5 "><i class="footer-i fas fa-wind mr-2" style="color: #b7b7b7;"></i>Eólica</p></a>
-                    <a href="#" class="text-decoration-none"><p class="footer-hover-f mb-5 "><i class="footer-i fas fa-tools mr-2" style="color: #1cb4d6;"></i>Hidráulica</p></a>
-                    <a href="#" class="text-decoration-none"><p class="footer-hover-a mb-5 "><i class="footer-i fas fa-water mr-2" style="color: #0085ff;"></i>Maremotriz</p></a>
+                    <a href="solar.html" class="text-decoration-none"><p class="footer-hover-s mb-5 "><i class="footer-i fas fa-solar-panel mr-2" style="color: #ffd600;"></i>Solar</p></a>
+                    <a href="eolica.html"class="text-decoration-none"><p class="footer-hover-v mb-5 "><i class="footer-i fas fa-wind mr-2" style="color: #b7b7b7;"></i>Eólica</p></a>
+                    <a href="hidraulica.html" class="text-decoration-none"><p class="footer-hover-f mb-5 "><i class="footer-i fas fa-tools mr-2" style="color: #1cb4d6;"></i>Hidráulica</p></a>
+                    <a href="maremotriz.html" class="text-decoration-none"><p class="footer-hover-a mb-5 "><i class="footer-i fas fa-water mr-2" style="color: #0085ff;"></i>Maremotriz</p></a>
                 </div>
 
                 <div class="col-md-4 col-lg-4 col-xl-4 mx-auto mt-3 text-center mt-5">
